# gm-phd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake.yaml
example/: CMakeLists.txt  example.cpp  example_et.cpp  rhm_examlpe.cpp  rhm_example_matlab.cpp  sensor_data_reader.cpp  sensor_data_reader.hpp  tg_example.cpp  trajectory_generation.cpp  trajectory_generation.hpp
include/: aliases.hpp  base_gm_phd.hpp  birth_generator_factory.hpp  birth_generator_interface.hpp  birth_generator_random.hpp  birth_model_base.hpp  birth_model_dummy.hpp  calibrated_object.hpp  common.hpp  cv_motion_model.hpp  et_gm_phd.hpp  et_gm_phd_cv_pose.hpp  extended_object.hpp  ghm_phd_cv_pose.hpp  giw_phd.hpp  gm_phd.hpp  gm_phd_calibrations.hpp  helpers.hpp  hypothesis.hpp  merge_classic.hpp  merge_factory.hpp  merge_interface.hpp  object_extractor_classic.hpp  object_extractor_interface.hpp  objects_extractor_factory.hpp  partition.hpp  partitioning.hpp  rhm_gm_phd.hpp  value_with_covariance.hpp
src/: cv_motion_model.cpp  distance_partitioner.hpp  et_gm_phd_cv_pose.cpp  gm_phd_cv_pose.cpp  rhm_gm_phd.cpp
tests/: CMakeLists.txt  birth_generator_factory.cpp  calibrated_object_test.cpp  gm_phd_test.cpp  hypothesis_test.cpp  object_extractor_factory.cpp
